rnsc/test_data/integration/error/parser/type_hints/long/overflow.rns
.class @long 99999999999999999999
.super java/lang/Object
